--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4746,8 +4746,9 @@ textarea.form-control.is-invalid {
   background-color: rgb(245 158 11 / var(--tw-bg-opacity));
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
   font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -4765,7 +4766,7 @@ textarea.form-control.is-invalid {
   border-radius: 0.25rem;
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(75 77 79 / var(--tw-border-opacity));
+  border-color: rgb(29 32 33 / var(--tw-border-opacity));
   background-color: transparent;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -4773,7 +4774,7 @@ textarea.form-control.is-invalid {
   padding-right: 2.5rem;
   font-weight: 500;
   --tw-text-opacity: 1;
-  color: rgb(75 77 79 / var(--tw-text-opacity));
+  color: rgb(29 32 33 / var(--tw-text-opacity));
 }
 
 .btn-box:hover {
@@ -4803,7 +4804,7 @@ textarea.form-control.is-invalid {
   line-height: 2.5rem;
   font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(75 77 79 / var(--tw-text-opacity));
+  color: rgb(29 32 33 / var(--tw-text-opacity));
 }
 
 .text-h3 {
@@ -4812,7 +4813,7 @@ textarea.form-control.is-invalid {
   line-height: 2.25rem;
   font-weight: 800;
   --tw-text-opacity: 1;
-  color: rgb(75 77 79 / var(--tw-text-opacity));
+  color: rgb(29 32 33 / var(--tw-text-opacity));
 }
 
 .text-p {
@@ -4860,12 +4861,16 @@ textarea.form-control.is-invalid {
   left: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .right-0 {
   right: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .left-0 {
@@ -4874,6 +4879,10 @@ textarea.form-control.is-invalid {
 
 .z-10 {
   z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .z-0 {
@@ -4902,11 +4911,6 @@ textarea.form-control.is-invalid {
 
 .m-0 {
   margin: 0px;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mt-24 {
@@ -4965,6 +4969,12 @@ textarea.form-control.is-invalid {
   display: none;
 }
 
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-\[650px\] {
   height: 650px;
 }
@@ -5005,6 +5015,12 @@ textarea.form-control.is-invalid {
   width: 100vw;
 }
 
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -5019,12 +5035,6 @@ textarea.form-control.is-invalid {
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .w-60 {
@@ -5065,10 +5075,6 @@ textarea.form-control.is-invalid {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-40 {
-  width: 10rem;
 }
 
 .max-w-\[1550px\] {
@@ -5124,6 +5130,10 @@ textarea.form-control.is-invalid {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.transform-gpu {
+  transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-default {
   cursor: default;
 }
@@ -5158,10 +5168,6 @@ textarea.form-control.is-invalid {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .content-between {
@@ -5204,6 +5210,10 @@ textarea.form-control.is-invalid {
   justify-content: space-evenly;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -5212,16 +5222,12 @@ textarea.form-control.is-invalid {
   gap: 1.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-20 {
-  gap: 5rem;
 }
 
 .gap-3 {
@@ -5249,6 +5255,10 @@ textarea.form-control.is-invalid {
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -5261,10 +5271,6 @@ textarea.form-control.is-invalid {
   border-radius: 0.75rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -5273,6 +5279,10 @@ textarea.form-control.is-invalid {
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border {
@@ -5331,14 +5341,19 @@ textarea.form-control.is-invalid {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-foxBrown {
+.bg-foxColor {
   --tw-bg-opacity: 1;
-  background-color: rgb(75 77 79 / var(--tw-bg-opacity));
+  background-color: rgb(29 32 33 / var(--tw-bg-opacity));
 }
 
 .bg-amber-400 {
@@ -5374,14 +5389,6 @@ textarea.form-control.is-invalid {
   --tw-bg-opacity: 0.5;
 }
 
-.bg-opacity-100 {
-  --tw-bg-opacity: 1;
-}
-
-.bg-opacity-10 {
-  --tw-bg-opacity: 0.1;
-}
-
 .bg-heroImg-mobile {
   background-image: url('../assets/img/header_mobile.webp');
 }
@@ -5402,8 +5409,8 @@ textarea.form-control.is-invalid {
   background-image: url('/public/assets/icons/4.svg');
 }
 
-.bg-\[length\:900px\] {
-  background-size: 900px;
+.bg-\[length\:1000px\] {
+  background-size: 1000px;
 }
 
 .bg-center {
@@ -5446,6 +5453,11 @@ textarea.form-control.is-invalid {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-4 {
@@ -5493,6 +5505,14 @@ textarea.form-control.is-invalid {
   padding-bottom: 0.5rem;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -5533,10 +5553,6 @@ textarea.form-control.is-invalid {
   padding-top: 1rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pt-28 {
   padding-top: 7rem;
 }
@@ -5553,28 +5569,17 @@ textarea.form-control.is-invalid {
   padding-bottom: 0.25rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-5xl {
@@ -5602,14 +5607,8 @@ textarea.form-control.is-invalid {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.font-medium {
+  font-weight: 500;
 }
 
 .font-normal {
@@ -5618,10 +5617,6 @@ textarea.form-control.is-invalid {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-medium {
-  font-weight: 500;
 }
 
 .font-semibold {
@@ -5644,9 +5639,9 @@ textarea.form-control.is-invalid {
   letter-spacing: 0.1em;
 }
 
-.text-foxBrown {
+.text-foxColor {
   --tw-text-opacity: 1;
-  color: rgb(75 77 79 / var(--tw-text-opacity));
+  color: rgb(29 32 33 / var(--tw-text-opacity));
 }
 
 .text-amber-500 {
@@ -5657,6 +5652,11 @@ textarea.form-control.is-invalid {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-darkcolor {
+  --tw-text-opacity: 1;
+  color: rgb(15 18 20 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -5674,40 +5674,33 @@ textarea.form-control.is-invalid {
   color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
-.text-darkcolor-light {
-  --tw-text-opacity: 1;
-  color: rgb(45 48 49 / var(--tw-text-opacity));
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.opacity-0 {
-  opacity: 0;
+.subpixel-antialiased {
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
 }
 
 .opacity-100 {
   opacity: 1;
 }
 
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.opacity-20 {
-  opacity: 0.2;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -5756,8 +5749,18 @@ textarea.form-control.is-invalid {
   transition-duration: 300ms;
 }
 
+.duration-150 {
+  transition-duration: 150ms;
+}
+
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.hover\:scale-\[1\.15\]:hover {
+  --tw-scale-x: 1.15;
+  --tw-scale-y: 1.15;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:border-gray-300:hover {
@@ -5815,18 +5818,6 @@ textarea.form-control.is-invalid {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-md:hover {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-gray-200:hover {
   --tw-shadow-color: #E5E7EB;
   --tw-shadow: var(--tw-shadow-colored);
@@ -5867,18 +5858,23 @@ textarea.form-control.is-invalid {
   display: none;
 }
 
-.dark .dark\:divide-foxBrown > :not([hidden]) ~ :not([hidden]) {
+.dark .dark\:divide-foxColor > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
-  border-color: rgb(75 77 79 / var(--tw-divide-opacity));
+  border-color: rgb(29 32 33 / var(--tw-divide-opacity));
 }
 
 .dark .dark\:divide-opacity-90 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 0.9;
 }
 
-.dark .dark\:border-foxBrown {
+.dark .dark\:border-darkcolor-light {
   --tw-border-opacity: 1;
-  border-color: rgb(75 77 79 / var(--tw-border-opacity));
+  border-color: rgb(45 48 49 / var(--tw-border-opacity));
+}
+
+.dark .dark\:border-foxColor {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 32 33 / var(--tw-border-opacity));
 }
 
 .dark .dark\:border-gray-600 {
@@ -5943,12 +5939,22 @@ textarea.form-control.is-invalid {
   background-color: rgb(31 41 55 / 0.5);
 }
 
+.dark .dark\:bg-foxColor {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 32 33 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
 
 .dark .dark\:bg-opacity-80 {
   --tw-bg-opacity: 0.8;
+}
+
+.dark .dark\:text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -5961,19 +5967,14 @@ textarea.form-control.is-invalid {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 
-.dark .dark\:hover\:bg-foxBrown:hover {
+.dark .dark\:hover\:bg-foxColor:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(75 77 79 / var(--tw-bg-opacity));
+  background-color: rgb(29 32 33 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-gray-600:hover {
@@ -6006,65 +6007,9 @@ textarea.form-control.is-invalid {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.dark .dark\:hover\:placeholder-opacity-10:hover::-moz-placeholder {
-  --tw-placeholder-opacity: 0.1;
-}
-
-.dark .dark\:hover\:placeholder-opacity-10:hover::placeholder {
-  --tw-placeholder-opacity: 0.1;
-}
-
-.dark .dark\:hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:hover\:shadow-black:hover {
-  --tw-shadow-color: #000000;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:shadow-darkcolor-light:hover {
-  --tw-shadow-color: #2d3031;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:shadow-darkcolor:hover {
-  --tw-shadow-color: #0F1214;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:shadow-zinc-800:hover {
-  --tw-shadow-color: #27272a;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:shadow-zinc-900:hover {
-  --tw-shadow-color: #18181b;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:shadow-\[\#090b0d\]:hover {
-  --tw-shadow-color: #090b0d;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .dark .dark\:hover\:shadow-\[\#0b0e0f\]:hover {
   --tw-shadow-color: #0b0e0f;
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.dark .dark\:hover\:backdrop-opacity-25:hover {
-  --tw-backdrop-opacity: opacity(0.25);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.dark .dark\:hover\:backdrop-opacity-10:hover {
-  --tw-backdrop-opacity: opacity(0.1);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 @media (min-width: 640px) {
@@ -6139,7 +6084,7 @@ textarea.form-control.is-invalid {
     line-height: 2.5rem;
     font-weight: 700;
     --tw-text-opacity: 1;
-    color: rgb(75 77 79 / var(--tw-text-opacity));
+    color: rgb(29 32 33 / var(--tw-text-opacity));
   }
 
   .laptop\:relative {
@@ -6223,6 +6168,10 @@ textarea.form-control.is-invalid {
     justify-content: center;
   }
 
+  .laptop\:gap-20 {
+    gap: 5rem;
+  }
+
   .laptop\:gap-8 {
     gap: 2rem;
   }
@@ -6249,9 +6198,9 @@ textarea.form-control.is-invalid {
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
-  .laptop\:border-foxBrown {
+  .laptop\:border-foxColor {
     --tw-border-opacity: 1;
-    border-color: rgb(75 77 79 / var(--tw-border-opacity));
+    border-color: rgb(29 32 33 / var(--tw-border-opacity));
   }
 
   .laptop\:bg-heroImg {
@@ -6274,6 +6223,14 @@ textarea.form-control.is-invalid {
   .laptop\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .laptop\:pr-16 {
+    padding-right: 4rem;
+  }
+
+  .laptop\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .laptop\:pt-0 {
@@ -6301,9 +6258,9 @@ textarea.form-control.is-invalid {
     font-weight: 800;
   }
 
-  .laptop\:text-foxBrown {
+  .laptop\:text-foxColor {
     --tw-text-opacity: 1;
-    color: rgb(75 77 79 / var(--tw-text-opacity));
+    color: rgb(29 32 33 / var(--tw-text-opacity));
   }
 
   .laptop\:text-amber-500 {
